# udo

./: .dockerignore  Cargo.toml  README.md  input.txt  run_dev.sh  udo_metrics.duckdb
.github/workflows/: ci.yml
config/: udo.yaml
docker/: Dockerfile
docs/: ARCHITECTURE.md  CODEBASE_WALKTHROUGH.md  PRODUCT_SPECIFICATION.md  PROJECT_STATUS.md  SCALABILITY_AND_DEPLOYMENT.md
k8s/udo-chart/: Chart.yaml  values.yaml
k8s/udo-chart/templates/: _helpers.tpl  deployment.yaml  keda-scaledobject.yaml
src/: lib.rs  main.rs
src/api/: auth.rs  metrics.rs  mod.rs  server.rs
src/core/: config.rs  error.rs  mod.rs  model.rs  pipeline.rs  schema.rs
src/io/: dlq.rs  mod.rs  sink.rs  source.rs
src/processors/: mod.rs  ner.rs  pii.rs  semantic.rs
src/utils/: json.rs
terraform/: main.tf
tests/: json_to_arrow.rs  pii_test.rs  schema_drift.rs  semantic_test.rs  streaming_resiliency.rs
web/: next.config.ts  package-lock.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/config/: page.tsx
web/app/dashboard/: page.tsx
web/app/docs/: layout.tsx  page.tsx
web/app/docs/architecture/: page.tsx
web/app/docs/integration/: page.tsx
web/app/docs/product/: page.tsx
web/app/docs/status/: page.tsx
web/app/docs/usage/: page.tsx
