[package]
name = "udo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
arrow = { version = "57.0.0", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
simd-json = "0.13"
parquet = "57.0.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
polars = { version = "0.36", features = ["lazy", "parquet"] }
async-trait = "0.1.89"
tokio-stream = "0.1.18"
regex = "1.12.2"
sha2 = "0.10.9"

# Feature-gated dependencies
candle-core = { version = "0.8.2", optional = true }
candle-nn = { version = "0.8.2", optional = true }
candle-transformers = { version = "0.8.2", optional = true }
tokenizers = { version = "0.19.1", optional = true }
hf-hub = { version = "0.4", optional = true }
duckdb = { version = "1.0.0", features = ["bundled"], optional = true }
actix-web = { version = "4", optional = true }
actix-cors = { version = "0.7", optional = true }
rdkafka = { version = "0.38.0", features = ["tokio"], optional = true }
object_store = { version = "0.13.0", features = ["aws", "gcp", "azure"], optional = true }
url = { version = "2.5", optional = true }
futures = "0.3.31"
num_cpus = "1.17.0"
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde_yaml = "0.9.34"
actix-web-httpauth = "0.8.2"

[features]
default = []
ai = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]
semantic = ["ai"]
ner = ["ai"]
db = ["duckdb"]
server = ["actix-web", "actix-cors", "db"]
kafka = ["rdkafka"]
cloud = ["object_store", "url"]
full = ["semantic", "ner", "server", "kafka", "cloud"]

[dev-dependencies]
tempfile = "3.10"

[lib]
name = "udo"
path = "src/lib.rs"

[[bin]]
name = "udo-cli"
path = "src/main.rs"
